<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
		
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/no_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:text="@string/creditsMe"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:typeface="normal" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:autoLink="email"
            android:text="@string/Contatti"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="14sp" />

      

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/AltriRingraziamenti"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/apacheLink"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="12sp" />

    </LinearLayout>
</ScrollView>